Started implementing Slash Commands #2